fisier.output
Grammar

    0 $accept: program $end

    1 program: function

    2 function: function stmt
    3         | %empty

    4 stmt: ';'
    5     | expr ';'
    6     | PRINT expr ';'
    7     | WRITE expr ';'
    8     | VARIABLE '=' expr ';'
    9     | WHILE '(' expr ')' stmt
   10     | DO stmt WHILE '(' expr ')' ';'
   11     | FOR '(' stmt expr ';' expr ')' stmt
   12     | IF '(' expr ')' stmt
   13     | IF '(' expr ')' stmt ELSE stmt
   14     | '{' stmt_list '}'

   15 stmt_list: stmt
   16          | stmt_list stmt

   17 expr: INTEGER
   18     | VARIABLE
   19     | '-' expr
   20     | expr '+' expr
   21     | expr INC
   22     | expr DEC
   23     | INC expr
   24     | DEC expr
   25     | expr '-' expr
   26     | expr '*' expr
   27     | expr '/' expr
   28     | expr '<' expr
   29     | expr '>' expr
   30     | expr GE expr
   31     | expr LE expr
   32     | expr NE expr
   33     | expr EQ expr
   34     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 10 11 12 13 34
    ')' (41) 9 10 11 12 13 34
    '*' (42) 26
    '+' (43) 20
    '-' (45) 19 25
    '/' (47) 27
    ';' (59) 4 5 6 7 8 10 11
    '<' (60) 28
    '=' (61) 8
    '>' (62) 29
    '{' (123) 14
    '}' (125) 14
    error (256)
    INTEGER <iValue> (258) 17
    VARIABLE <sIndex> (259) 8 18
    WHILE (260) 9 10
    IF (261) 12 13
    PRINT (262) 6
    DO (263) 10
    WRITE (264) 7
    FOR (265) 11
    IFX (266)
    ELSE (267) 13
    GE (268) 30
    LE (269) 31
    EQ (270) 33
    NE (271) 32
    INC (272) 21 23
    DEC (273) 22 24
    UMINUS (274)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    function (34)
        on left: 2 3
        on right: 1 2
    stmt <nPtr> (35)
        on left: 4 5 6 7 8 9 10 11 12 13 14
        on right: 2 9 10 11 12 13 15 16
    stmt_list <nPtr> (36)
        on left: 15 16
        on right: 14 16
    expr <nPtr> (37)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 5 6 7 8 9 10 11 12 13 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (function)

    program   go to state 1
    function  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: function .
    2 function: function . stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    $default  reduce using rule 1 (program)

    stmt  go to state 18
    expr  go to state 19


State 3

    0 $accept: program $end .

    $default  accept


State 4

   17 expr: INTEGER .

    $default  reduce using rule 17 (expr)


State 5

    8 stmt: VARIABLE . '=' expr ';'
   18 expr: VARIABLE .

    '='  shift, and go to state 20

    $default  reduce using rule 18 (expr)


State 6

    9 stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 21


State 7

   12 stmt: IF . '(' expr ')' stmt
   13     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 22


State 8

    6 stmt: PRINT . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 24


State 9

   10 stmt: DO . stmt WHILE '(' expr ')' ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    stmt  go to state 25
    expr  go to state 19


State 10

    7 stmt: WRITE . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 26


State 11

   11 stmt: FOR . '(' stmt expr ';' expr ')' stmt

    '('  shift, and go to state 27


State 12

   19 expr: '-' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 28


State 13

   23 expr: INC . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 29


State 14

   24 expr: DEC . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 30


State 15

    4 stmt: ';' .

    $default  reduce using rule 4 (stmt)


State 16

   34 expr: '(' . expr ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 31


State 17

   14 stmt: '{' . stmt_list '}'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    stmt       go to state 32
    stmt_list  go to state 33
    expr       go to state 19


State 18

    2 function: function stmt .

    $default  reduce using rule 2 (function)


State 19

    5 stmt: expr . ';'
   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ';'  shift, and go to state 46


State 20

    8 stmt: VARIABLE '=' . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 47


State 21

    9 stmt: WHILE '(' . expr ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 48


State 22

   12 stmt: IF '(' . expr ')' stmt
   13     | IF '(' . expr ')' stmt ELSE stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 49


State 23

   18 expr: VARIABLE .

    $default  reduce using rule 18 (expr)


State 24

    6 stmt: PRINT expr . ';'
   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ';'  shift, and go to state 50


State 25

   10 stmt: DO stmt . WHILE '(' expr ')' ';'

    WHILE  shift, and go to state 51


State 26

    7 stmt: WRITE expr . ';'
   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ';'  shift, and go to state 52


State 27

   11 stmt: FOR '(' . stmt expr ';' expr ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    stmt  go to state 53
    expr  go to state 19


State 28

   19 expr: '-' expr .
   20     | expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    $default  reduce using rule 19 (expr)


State 29

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   23     | INC expr .
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    INC  error (nonassociative)
    DEC  error (nonassociative)

    $default  reduce using rule 23 (expr)


State 30

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   24     | DEC expr .
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    INC  error (nonassociative)
    DEC  error (nonassociative)

    $default  reduce using rule 24 (expr)


State 31

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr
   34     | '(' expr . ')'

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ')'  shift, and go to state 54


State 32

   15 stmt_list: stmt .

    $default  reduce using rule 15 (stmt_list)


State 33

   14 stmt: '{' stmt_list . '}'
   16 stmt_list: stmt_list . stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17
    '}'       shift, and go to state 55

    stmt  go to state 56
    expr  go to state 19


State 34

   30 expr: expr GE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 57


State 35

   31 expr: expr LE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 58


State 36

   33 expr: expr EQ . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 59


State 37

   32 expr: expr NE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 60


State 38

   29 expr: expr '>' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 61


State 39

   28 expr: expr '<' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 62


State 40

   20 expr: expr '+' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 63


State 41

   25 expr: expr '-' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 64


State 42

   26 expr: expr '*' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 65


State 43

   27 expr: expr '/' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 66


State 44

   21 expr: expr INC .

    $default  reduce using rule 21 (expr)


State 45

   22 expr: expr DEC .

    $default  reduce using rule 22 (expr)


State 46

    5 stmt: expr ';' .

    $default  reduce using rule 5 (stmt)


State 47

    8 stmt: VARIABLE '=' expr . ';'
   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ';'  shift, and go to state 67


State 48

    9 stmt: WHILE '(' expr . ')' stmt
   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ')'  shift, and go to state 68


State 49

   12 stmt: IF '(' expr . ')' stmt
   13     | IF '(' expr . ')' stmt ELSE stmt
   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    GE   shift, and go to state 34
    LE   shift, and go to state 35
    EQ   shift, and go to state 36
    NE   shift, and go to state 37
    '>'  shift, and go to state 38
    '<'  shift, and go to state 39
    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45
    ')'  shift, and go to state 69


State 50

    6 stmt: PRINT expr ';' .

    $default  reduce using rule 6 (stmt)


State 51

   10 stmt: DO stmt WHILE . '(' expr ')' ';'

    '('  shift, and go to state 70


State 52

    7 stmt: WRITE expr ';' .

    $default  reduce using rule 7 (stmt)


State 53

   11 stmt: FOR '(' stmt . expr ';' expr ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 71


State 54

   34 expr: '(' expr ')' .

    $default  reduce using rule 34 (expr)


State 55

   14 stmt: '{' stmt_list '}' .

    $default  reduce using rule 14 (stmt)


State 56

   16 stmt_list: stmt_list stmt .

    $default  reduce using rule 16 (stmt_list)


State 57

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   30     | expr GE expr .
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 30 (expr)


State 58

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   31     | expr LE expr .
   32     | expr . NE expr
   33     | expr . EQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 31 (expr)


State 59

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr
   33     | expr EQ expr .

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 33 (expr)


State 60

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   32     | expr NE expr .
   33     | expr . EQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 32 (expr)


State 61

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   29     | expr '>' expr .
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 29 (expr)


State 62

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   28     | expr '<' expr .
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 28 (expr)


State 63

   20 expr: expr . '+' expr
   20     | expr '+' expr .
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 20 (expr)


State 64

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   25     | expr '-' expr .
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    '*'  shift, and go to state 42
    '/'  shift, and go to state 43
    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 25 (expr)


State 65

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   26     | expr '*' expr .
   27     | expr . '/' expr
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 26 (expr)


State 66

   20 expr: expr . '+' expr
   21     | expr . INC
   22     | expr . DEC
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   27     | expr '/' expr .
   28     | expr . '<' expr
   29     | expr . '>' expr
   30     | expr . GE expr
   31     | expr . LE expr
   32     | expr . NE expr
   33     | expr . EQ expr

    INC  shift, and go to state 44
    DEC  shift, and go to state 45

    $default  reduce using rule 27 (expr)


State 67

    8 stmt: VARIABLE '=' expr ';' .

    $default  reduce using rule 8 (stmt)


State 68

    9 stmt: WHILE '(' expr ')' . stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    stmt  go to state 72
    expr  go to state 19


State 69

   12 stmt: IF '(' expr ')' . stmt
   13     | IF '(' expr ')' . stmt ELSE stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    PRINT     shift, and go to state 8
    DO        shift, and go to state 9
    WRITE     shift, and go to state 10
    FOR       shift, and go to state 11
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    ';'       shift, and go to state 15
    '('       shift, and go to state 16
    '{'       shift, and go to state 17

    stmt  go to state 73
    expr  go to state 19


State 70

   10 stmt: DO stmt WHILE '(' . expr ')' ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 23
    '-'       shift, and go to state 12
    INC       shift, and go to state 13
    DEC       shift, and go to state 14
    '('       shift, and go to state 16

    expr  go to state 74


State 71
